syntax = "proto3";

package models;

service Locket {
  rpc Lock(LockRequest) returns (LockResponse) {}
  rpc Fetch(FetchRequest) returns (FetchResponse) {}
  rpc Release(ReleaseRequest) returns (ReleaseResponse) {}
  rpc FetchAll(FetchAllRequest) returns (FetchAllResponse) {}
}

message Resource {
  string key = 1;
  string owner = 2;
  string value = 3;
}

message LockRequest {
  Resource resource = 1;
  int64 ttl_in_seconds = 2;
}

message ReleaseRequest {
  Resource resource = 1;
}

message FetchRequest {
  string key = 1;
}

message FetchAllRequest {}

message LockResponse {}

message ReleaseResponse {}

message FetchResponse {
  Resource resource = 1;
}

message FetchAllResponse {
  repeated Resource resources = 1;
}
